# nickmass-com

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md
client/: Cargo.toml
client/src/: bouncing.rs  gl.rs  header.rs  lib.rs  nickmass-com-text.rs  shaders.rs  youtube.rs
client/src/shaders/: ball_frag.glsl  ball_vert.glsl  blur_frag.glsl  blur_vert.glsl  bouncing_frag.glsl  bouncing_vert.glsl  circle_frag.glsl  circle_vert.glsl  logo_frag.glsl  logo_vert.glsl  noise_frag.glsl  noise_vert.glsl  quad_frag.glsl  quad_vert.glsl
public/css/: bundle.css  site.css
public/js/: header.js  main.js
src/: main.rs  server.rs
src/server/: auth.rs  config.rs  db.rs  error.rs  model.rs  models.rs  posts.rs  sessions.rs  users.rs  view.rs  views.rs
templates/: index.html  not_found.html  post.html  post_index.html  post_view.html
