[package]
name = "nickmass-com-client"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.40"
console_error_panic_hook = "0.1.6"
log = "0.4.6"
byteorder = "1.3.1"
fxhash = "0.2.1"

[dependencies.rand]
version = "0.6"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3"
features = [
"Window",
"Document",
"EventTarget",
"Element",
"HtmlElement",
"HtmlCanvasElement",
"WebGlRenderingContext",
"WebGlBuffer",
"WebGlProgram",
"WebGlShader",
"WebGlTexture",
"WebGlFramebuffer",
"WebGlUniformLocation",
"MouseEvent"
]
