[package]
name = "nickmass-com-client"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.43"
log = "0.4.6"
byteorder = "1.3.1"
gloo-events = "0.1.1"
lyon = "0.15"
js-sys = "0.3.28"

[dependencies.rand]
version = "0.7"
features = ["wasm-bindgen"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "EventTarget",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "Node",
    "WebGl2RenderingContext",
    "WebGlVertexArrayObject",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlFramebuffer",
    "WebGlUniformLocation",
    "MouseEvent",
    "console",
]
